# pypokerstar

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose-example.yaml  main.py  package-lock.json  pyproject.toml  tests.py  tree.txt  villain_stats.csv
PokerStars/2025/08/27/: HH20250822 Arneb #3 - 0,01 €-0,02 € - EUR Hold_em Sin límite.txt  HH20250822 Arneb - 0,01 €-0,02 € - EUR Hold_em Sin límite.txt  HH20250824 Arneb #2 - 0,01 €-0,02 € - EUR Hold_em Sin límite.txt  HH20250825 Arneb #4 - 0,01 €-0,02 € - EUR Hold_em Sin límite.txt  HH20250825 Arneb - 0,01 €-0,02 € - EUR Hold_em Sin límite.txt  HH20250826 Arneb #3 - 0,01 €-0,02 € - EUR Hold_em Sin límite.txt  (+7 more)
backend/: Dockerfile  main.py  models.py
pokerserver/: Dockerfile  package-lock.json  package.json
pokerserver/components/: screen.css  screen.jsx
pokerserver/src/: App.js  config.js
pokerserver/src/api/: apiRange.js
pokerserver/src/components/: basic.css  basic.jsx  pair.css  pair.jsx  range.css  range.jsx  rangeMenu.css  rangeMenu.jsx  screen.css  screen.jsx  statistics.jsx  upperMenu.css  upperMenu.jsx
pypokerstar/: __init__.py
pypokerstar/src/: __init__.py
pypokerstar/src/game/: poker.py
pypokerstar/src/log/: __init__.py
pypokerstar/src/metrics/: metrics.py
pypokerstar/src/parsers/: parser.py  pokerparser.py  pokerstars.py
pypokerstar/src/tools/: playerstats.py
pypokerstar/src/types/: __init__.py  cards.py
src/game/: poker.py
src/parsers/: pokerstars.py
src/tools/: playerstats.py
src/types/: __init__.py  cards.py
tests/: pokerdata.txt
(+247 files in other folders)
