[tool.poetry]
name = "pypokerstar"
version = "0.1.0"
description = ""
authors = ["Pablo Minue"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.11.7"
polars = "^1.32.3"
rich = "^14.1.0"
pandas = "^2.3.2"
matplotlib = "^3.10.6"
pyarrow = "^21.0.0"
maturin = "^1.9.6"
phevaluator = "^0.5.3.1"
fastapi = "^0.119.1"
sqlalchemy = "^2.0.44"
uvicorn = "^0.38.0"
pymysql = "^1.1.2"


[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"


[tool.maturin]
module-name = "solver_bridge"
bindings = "pyo3"
manifest-path = "solver/Cargo.toml"